/* Neo FreeRunner */ Updates following todays announcement on 2008.8 updates

--- a/Download.mw
+++ b/Download.mw
@@ -16,16 +16,20 @@ If you want to install a system to a microSD card, see [[Booting from SD]].
 {{Main|Om 2008.8}}
 
 ==== Neo FreeRunner ====
-Latest stable release: 
-http://downloads.openmoko.org/releases/Om2008.8/ 
+
+The official updates for the "stable" version of 2008.8 have been setup (see [http://lists.openmoko.org/pipermail/community/2008-August/027997.html announcement]).
+
+Latest "stable" release (may be updated daily): 
+http://downloads.openmoko.org/releases/Om2008.8-update/
+* Root FS images are like: YYYYMMDD-asu-stable-rootfs.rootfs.jffs2 
+* Kernel images are like:  YYYYMMDD-asu-stable-uImage.bin
+
+Previous initial release :
+http://downloads.openmoko.org/releases/Om2008.8/
 * Root FS files are like: Om2008.8-gta02-20080808.rootfs.jffs2 
 * Kernel files are like:  Om2008.8-gta02-20080808.uImage.bin
 
-There should be some official updates for 2008.8 setup soon, but in the meantime, you'll have to wait.
-
-There is *NO* feed yet at http://downloads.openmoko.org/repository/testing/ officially setup, don't use it.
-
-There are *NO* updates available for 2008.08 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.08 and will corrupt your software configuration if you use it.
+See [http://lists.openmoko.org/pipermail/community/2008-August/027997.html "Repository and Images" announcement] for details on other "Base image", "testing" and "unstable".
 
 ==== Neo 1973 ====
 There are no builds yet
