--- a/Download.mw
+++ b/Download.mw
@@ -29,6 +29,8 @@ http://downloads.openmoko.org/releases/Om2008.8/
 * Root FS files are like: Om2008.8-gta02-20080808.rootfs.jffs2 
 * Kernel files are like:  Om2008.8-gta02-20080808.uImage.bin
 
+=== Daily "testing" and "unstable" official repositories ===
+
 See [http://lists.openmoko.org/pipermail/community/2008-August/027997.html "Repository and Images" announcement] for details on other "Base image", "testing" and "unstable".
 
 ==== Neo 1973 ====
