/* Om 2008.8 images (ASU) */

--- a/Download.mw
+++ b/Download.mw
@@ -12,10 +12,11 @@ In most cases you will download a Root FileSystem and a Kernel to flash into you
 
 If you want to install a system to a microSD card, see [[Booting from SD]].
 
-=== Om 2008.8 images (ASU) ===
-{{Main|Om 2008.8}}
+=== Om 2008.8 "stable" images (a.k.a ASU) ===
 
-==== Neo FreeRunner ====
+See {{Main|Om 2008.8}} for more details.
+
+==== "stable" releases for Neo FreeRunner ====
 
 The official updates for the "stable" version of 2008.8 have been setup (see [http://lists.openmoko.org/pipermail/community/2008-August/027997.html announcement]).
 
