*Empty MediaWiki Message*

--- a/Download.mw
+++ b/Download.mw
@@ -30,14 +30,17 @@ http://downloads.openmoko.org/releases/Om2008.8/
 * Root FS files are like: Om2008.8-gta02-20080808.rootfs.jffs2 
 * Kernel files are like:  Om2008.8-gta02-20080808.uImage.bin
 
+==== "stable" for Neo 1973 ====
+There are no builds yet
+
 === Daily "testing" and "unstable" official repositories ===
 
 See [http://lists.openmoko.org/pipermail/community/2008-August/027997.html "Repository and Images" announcement] for details on other "Base image", "testing" and "unstable".
 
-==== Neo 1973 ====
-There are no builds yet
-
 ==== Unofficial builds by zecke ====
+
+''May need to be removed since testing/unstable are official now ?''
+
 [http://wiki.openmoko.org/wiki/Om_2008.8_Guide#Unofficial_.28zecke.29_Updates howto]
 <pre>
 development/unstable trees:
