--- a/Stable_Hybrid_Release.mw
+++ b/Stable_Hybrid_Release.mw
@@ -64,7 +64,7 @@ Here's a list of people who've expressed an interest in working on the SHR.
 * [[User:Andre613|Andre Racicot]]
 * [[User:Pyknite|Pyknite]]
 * [[User:write_erase|write_erase]]
-* [[User:Aleix]]
+* [[User:Aleix|Aleix]]
 
 == How to join ==
 * Please add your name (with a link to your user page) to the list above.
