changed heading size

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -3,11 +3,11 @@
 
 {{Distributions|Om 2008.8}}
 
-= Summary =
+== Summary ==
 
 '''Om 2008.8''' is the successor to [[Om 2007.2]] and had '''ASU''' as a codename. It was [http://lists.openmoko.org/pipermail/community/2008-August/025619.html released] on '''August 08, 2008'''. Om 2008.8 uses EFL for the launcher, custom UI applications and [[QtopiaOnX11|Qtopia on X11]] for telephony. The distribution  is the first step from GTK+ on x11 to using multiple toolkits in combination.
 
-= What's New ? =
+== What's New ? ==
 
 Compared to 2007.2 that has a longer development history, Om 2008.8 is definitely a .0 major release. So think KDE 4.0 vs. 3.5, not Linux 2.6.23 vs. 2.6.22. If you want the stability level required to use the Freerunner as your main phone, it is suggested for now to keep 2007.2 in the phone's flash memory and test 2008.8 on a removable SD card.
 
@@ -48,7 +48,7 @@ For more details, see the [[Om 2008.8 Guide]] and the [[Om2008.8 Feature Plan|Om
 <!---the following anchor is here to ensure that the "Download" link at http://openmoko.com/download.html links to the correct section. please don't delete the anchor unless that link is changed or removed--->
 <span id="Flash_Om_2008.8_images"></span>
 
-= Installation =
+== Installation ==
 
 To install the Om2008.8 "stable" distribution on the Neo FreeRunner:
 * As explained in the [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]] page, download the Root Filesystem ([http://downloads.openmoko.org/releases/Om2008.8-update/20080826-asu-stable-rootfs.jffs2 20080826-asu-stable-rootfs.jffs2], 68M) and the Kernel ([http://downloads.openmoko.org/releases/Om2008.8-update/20080826-asu-stable-uImage.bin 20080826-asu-stable-uImage.bin], 1.8M) image files (links as of 2008/08/26 for the updated "stable" release of 2008.8, see [http://lists.openmoko.org/pipermail/community/2008-August/027997.html announcement]).
@@ -58,7 +58,7 @@ To install the Om2008.8 "stable" distribution on the Neo FreeRunner:
 * Since you just wiped out /etc, /root  and /users, you may want to reconfigure a few things, like /etc/resolv.conf (see below). For security, you may want to set a root password, add a non-root user and transfer ~/.ssh/authorized_keys and so on.
 * Reinstall your favorite applications.
 
-= Known Issues =
+== Known Issues ==
 
 This is only a subset. See [http://docs.openmoko.org/trac/search?q=2008.8 all tickets with 2008.8] in the bug tracker.
 
@@ -115,7 +115,7 @@ and add <tt>usb*</tt> above <tt>eth*</tt> in <tt>/etc/resolvconf/interface-order
 * The installer app doesn't release administrative rights which results in not being able to use opkg. Solution: run "killall packagekitd" (on the freerunner or when ssh'ed in).
 * The installer app doesn't release administrative rights which results in not being able to use opkg. Alternate Solution: On the FreeRunner, use the drop-down menu to close all open applications.
 
-= Official updates for "stable" Om 2008.8 =
+== Official updates for "stable" Om 2008.8 ==
 
 Posterior to the Om2008.8 release made on 2008/08/08, development of ASU/Om2008.8 is switching to a Debian-like model with three branches: stable,  testing and unstable ([http://lists.openmoko.org/pipermail/community/2008-August/026491.html see this message] for more details).
 
@@ -123,7 +123,7 @@ Official updates for the "stable" branch are now available (as of 2008/08/26) in
 * in the http://downloads.openmoko.org/repository/Om2008.8/ opkg feeds (which should already be configured for opkg updates in 2008.8),
 * as flash-able images in http://downloads.openmoko.org/releases/Om2008.8-update/
 
-= Dedication =
+== Dedication ==
 
 <pre>
 From: Openmoko
