--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -75,6 +75,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[Flashing in windows/it]] || English page has already been deleted || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[Application]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[Direct.openmoko.com order process]] || outdated, is about the old webshop || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 ==Categories ==
