/* Pages proposed for deletion */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -77,6 +77,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[Application]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[Direct.openmoko.com order process]] || outdated, is about the old webshop || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[Bootcharts]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 ==Categories ==
