--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -279,10 +279,11 @@ Status:10/10
 *Lalo<br/> lalo dot martins at gmail (do ''not'' email me with random stuff, specially in Chinese!)<br/> 1 freerunner
 *Lu Kuo<br />Email and MSN: koreylu#hotmail.com (substitute @ for # please)<br />1 freerunner and 1 debug board
 
-Status:3/10
+Status:4/10
 *Chen Mo  <br/> mailto:abacan@gmail.com <br/>  1 freerunner and 1 debug board.
 *Hong Zhiyi  <br/> mailto: zhiyi.hong@gmail.com <br/>  1 freerunner
 *Yang Ming  <br/> mailto: yangm.cn at gmail.com <br/>  1 freerunner.
+*Xin Jia  <br/> mailto: xinjia.cn at gmail.com <br/>  1 freerunner.
 
 === ShangHai ===
 Status:5/10
