*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_China.mw
+++ b/Openmoko_Local_Groups:_China.mw
@@ -51,5 +51,14 @@
 '''email:''' caijinyan2000@hotmail.com
 
 ----------------------------------------
+----------------------------------------
+
+'''name:''' Xin Jia
+
+'''location:''' Shijiazhuang
+
+'''email:''' xinjia.cn at gmail.com
+
+----------------------------------------
 
 [[Category:Openmoko Local Groups]]
