*Empty MediaWiki Message*

--- a/FSO_ringtones.mw
+++ b/FSO_ringtones.mw
@@ -48,6 +48,9 @@ Then
 #I've only run the above restart commands in Debian so I'm not sure if they are the same in the default FSO image
 #the default zhone-session file doesn't have a working restart command, hence the stop->sleep 2->start
 
+zhone for FSO seems to be launched by Xsession.d so maybe try:
+ /etc/init.d/xserver-nodm restart
+
 Now you can link /usr/share/sounds/ringtone to any mp3 and that will be your ringtone
 
 [[Category:Add-on data]]
