/* Available Software */ Add instruction on routing traffic through Wifi instead of USB

--- a/Neo_FreeRunner_Wifi.mw
+++ b/Neo_FreeRunner_Wifi.mw
@@ -251,6 +251,15 @@ http://hostap.epitest.fi/gitweb/gitweb.cgi?p=hostap.git;a=blob_plain;f=wpa_suppl
 
 Note: Don't forget to make this script executable with "chmod +x <filename>"
 
+== Route internet connection through Wifi rather than USB ==
+
+Wifi is faster than USB, so it is a good idea to tell the FreeRunner to connect through it. Put the following in /etc/network/interfaces under eth0:
+
+up route del default gw 192.168.0.200
+
+This will remove your computer as the default gateway and use the  wireless one when the interface is brought up. User nickd reports that sometimes it fails so he has had to put it in twice.
+
+
 == Available Software ==
 
 Programs in development providing GUI interfaces to administer WiFi connections:
