--- a/Biking.mw
+++ b/Biking.mw
@@ -25,7 +25,7 @@ The Freerunner has three different [[Forcing_fast_charge_mode|charging modes]]: 
 
 === self-made chargers ===
 * Article (German) in c't 23/2007, page 190 [http://www.heise.de/kiosk/archiv/ct/07/23/190]
-* maybe 6V "Forumslader" [http://www.forumslader.de/6V-Version-des-Rad-Forum-Ladegeraets.125.0.html]
+* maybe 6V "Forumslader" [http://www.forumslader.de/6V-Version-des-Rad-Forum-Ladegeraets.125.0.html] (You need at least one diode in series to be within the maximum ratings of the power managment IC and the FET switches in FreeRunner.)
 * Makela [http://www.iki.fi/~msmakela/electronics/dynamo5v/] 
 
 Linear regulator above might be replaced with [http://www.dimensionengineering.com/DE-SW050.htm]
