--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -86,7 +86,7 @@ Any problems with the software below should be reported to the individual softwa
 
 :Minimo is a Mozilla based web browser. It features full AJAX support and other goodies. It is listed as an alternative to the standard Webkit based browser.
 
-:Download here:
+:Download here:[https://projects.openmoko.org/projects/openmoko-mail/ project in projects.openmoko.org]
 
 :Distribution:[[Om2007.2]]
 
@@ -111,8 +111,6 @@ Orrery displays the objects in the night (or day) sky.  It uses the GPS position
 :[http://projects.openmoko.org/frs/?group_id=182 OMView packages]
 
 |}
-
-
 
 === System Software ===
 This is software that mostly has no GUI. This software is usually used by other programs.
