--- a/GTA04.mw
+++ b/GTA04.mw
@@ -9,5 +9,5 @@ New:
 *  USB 2.0 will be added on the GTA04 at the earliest
 * 3G will be added on the GTA04 at the earliest
 * Based on a more advanced SoC
-* maybe based on the samsung 6400
+* maybe based on the samsung 6400 or 6410
 * integrated graphics
