/* Developping Zhone */  typo

--- a/Zhone.mw
+++ b/Zhone.mw
@@ -20,7 +20,7 @@ The Framework Testing Image.
 * Now you can finally execute:
  zhone
 
-== Developping Zhone ==
+== Developing Zhone ==
 * Install Zhone see [[Zhone#Installing Zhone on Ubuntu]]
 * apt-get source zhone
 
