/* Some APN names for reference */  added virgin australia

--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -292,6 +292,8 @@ fi
 ! user/password if required
 ! Working pppd scripts
 |-
+| Australia || Virgin || Any || VirginInternet || ||
+|-
 | Australia || Vodafone || Any || vfinternet.au || ||
 |-
 | Canada || Fido || Any, behind NAT || internet.fido.ca || fido/fido || mdbus -s org.freesmartphone.frameworkd /org/freesmartphone/GSM/Device
