--- a/Minimo%2Fes.mw
+++ b/Minimo%2Fes.mw
@@ -79,5 +79,5 @@ Inicia Xephyr. No necesitas iniciar sesión en Openmoko, Minimo puede ejecutarse
 </pre>
 {{Languages|Minimo}}
 
-[[Category:Applications]]
-[[Category:Guides]]
+[[Category:Applications/es]]
+[[Category:Guides/es]]
