--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1806,9 +1806,9 @@ Due to common customs problems we created google group to discuss how to get tha
 |-
 | 32. [[Special:Emailuser/Shalygin.V|Shalygin.V]]
 | Shalygin.V
-| 1(P5.1)
-| 1(P5.1)
-| 1(P5.1)
+| 1(P4.2)
+| 1(P4.2)
+| 1(P4.2)
 |-
 | 33. [[Special:Emailuser/GreyCardinal|GreyCardinal]]
 | GreyCardinal
@@ -1971,10 +1971,10 @@ Due to common customs problems we created google group to discuss how to get tha
 | 0(1? я в раздумьях)
 |-
 | 5. [[Special:Emailuser/krigstask|krigstask]]
-| sterkrig
-| 1(P4.2)
+| sterkrig (куплю на linuxcenter.ru)
+| 1
 |
-| 1(P4.2)
+| 1
 |-
 | 6. [[Special:Emailuser/lupin-de-mid|Lupin Demid]]
 |  lupin-de-mid
