*Empty MediaWiki Message*

--- a/Minimo%2Fit.mw
+++ b/Minimo%2Fit.mw
@@ -61,5 +61,5 @@ Fai partire Xephyr. Non hai bisogno di iniziare una sessione Openmoko, minimo pu
 </pre>
 {{Languages|Minimo}}
 
-[[Category:Applications]]
-[[Category:Guides]]
+[[Category:Applications/it]]
+[[Category:Guides/it]]
