--- a/Minimo%2Fzh_cn.mw
+++ b/Minimo%2Fzh_cn.mw
@@ -79,5 +79,5 @@ sudo aptitude install libidl-dev
 / $ minimo  
 </pre>
 
-[[Category:Applications]]
-[[Category:Guides]]
+[[Category:Applications/zh cn]]
+[[Category:Guides/zh cn]]
