*Empty MediaWiki Message*

--- a/Minimo%2Fzh_tw.mw
+++ b/Minimo%2Fzh_tw.mw
@@ -79,5 +79,5 @@ sudo aptitude install libidl-dev
 / $ minimo  
 </pre>
 
-[[Category:Applications]]
-[[Category:Guides]]
+[[Category:Applications/zh tw]]
+[[Category:Guides/zh tw]]
