*Empty MediaWiki Message*

--- a/Customizing_the_Openmoko_Distribution%2Fde.mw
+++ b/Customizing_the_Openmoko_Distribution%2Fde.mw
@@ -353,6 +353,6 @@ Complete the last steps as per the above instructions, from the point of alterin
 
 And you're done!
 
-[[Category:Applications]]
-[[Category:Openmoko]]
-[[Category:Guides]]
+[[Category:Applications/de]]
+[[Category:Openmoko/de]]
+[[Category:Guides/de]]
