*Empty MediaWiki Message*

--- a/Customizing_the_Openmoko_Distribution%2Fzh_cn.mw
+++ b/Customizing_the_Openmoko_Distribution%2Fzh_cn.mw
@@ -366,6 +366,6 @@ do_install() {
 ====最后的收尾动作====
 完成从<code>DISTRO_EXTRA_RDEPENDS</code>开始的所有操作动作。
 
-[[Category:Applications]]
-[[Category:Openmoko]]
-[[Category:Guides]]
+[[Category:Applications/zh cn]]
+[[Category:Openmoko/zh cn]]
+[[Category:Guides/zh cn]]
