--- a/Customizing_the_Openmoko_Distribution%2Fzh_tw.mw
+++ b/Customizing_the_Openmoko_Distribution%2Fzh_tw.mw
@@ -368,6 +368,6 @@ do_install() {
 ====最後的收尾動作====
 完成從<code>DISTRO_EXTRA_RDEPENDS</code>開始的所有操作動作。
 
-[[Category:Applications]]
-[[Category:Openmoko]]
-[[Category:Guides]]
+[[Category:Applications/zh tw]]
+[[Category:Openmoko/zh tw]]
+[[Category:Guides/zh tw]]
