*Empty MediaWiki Message*

--- a/Manual_Debian.mw
+++ b/Manual_Debian.mw
@@ -341,6 +341,6 @@ Now you should be able to start tangogps from the X-mouse start menu:
 
 An official Debian port based on the FSO image is being created. First information can be found at http://wiki.debian.org/pkg-fso. Early adopters are welcome.
 
-[[Category:Distributions]]
+[[Category:Debian]]
 [[Category:Software (non openmoko)]]
 [[category:Technical]]
