*Empty MediaWiki Message*

--- a/Debian.mw
+++ b/Debian.mw
@@ -162,5 +162,5 @@ If computer says:
 It means you haven't istalled xauth on your OM. So on your OM (with root permissions)
  apt-get install xauth 
 
-[[Category:Distributions| ]]
+[[Category:Debian]]
 [[Category:Documentation]]
