*Empty MediaWiki Message*

--- a/Qtopia_on_Neo1973.mw
+++ b/Qtopia_on_Neo1973.mw
@@ -275,7 +275,7 @@ For full size videos, 346 MiB:
 
 {{Languages|Qtopia_on_Neo1973}}
 
-[[Category:Distributions]]
+[[Category:Distributions| ]]
 [[Category:Software (non openmoko)]]
 [[Category:Applications]]
 [[Category:Qtopia]]
