*Empty MediaWiki Message*

--- a/Angstrom_on_Neo1973.mw
+++ b/Angstrom_on_Neo1973.mw
@@ -28,4 +28,4 @@ This page describes the process on getting the [http://www.angstrom-distribution
 
 After rebooting X should start at the end of the graphical boot and the first application to start up should be stylus calibration and then creating the first user account.
 
-[[Category:Distributions]]
+[[Category:Angstrom]]
