--- a/Download.mw
+++ b/Download.mw
@@ -184,4 +184,4 @@ If you want to carry this wiki along with you and to use it offline, then downlo
 [http://om-tiddlywiki.projects.openmoko.org/openmokowiki.html http://om-tiddlywiki.projects.openmoko.org/openmokowiki.html] and store it locally, then browse through the pages which you think you need to have, click  "save changes", so next time you open it all articles you have fetched previously will be available to you.
 
 
-[[Category:Openmoko]]
+[[Category:Distributions]]
