*Empty MediaWiki Message*

--- a/Today%2F2007.2.mw
+++ b/Today%2F2007.2.mw
@@ -146,3 +146,4 @@ The appearance of the display locker can be modified, as well, by following the 
  
 [[Category:Openmoko]]
 [[Category:Implemented]]
+[[Category:Om 2007.2]]
