*Empty MediaWiki Message*

--- a/Dialer%2F2007.2.mw
+++ b/Dialer%2F2007.2.mw
@@ -134,3 +134,4 @@ These are the signals which an application can listen to:
 
 [[Category:Applications]]
 [[Category:Implemented]]
+[[Category:Om 2007.2]]
