--- a/Contacts%2F2007.2.mw
+++ b/Contacts%2F2007.2.mw
@@ -90,3 +90,4 @@ This pane allows the user to manage the groups the contact is associated with. I
 [[Category:Openmoko]]
 [[Category:Finger based]]
 [[Category:Implemented]]
+[[Category:Om 2007.2]]
