--- a/Games%2FOm_2007.2.mw
+++ b/Games%2FOm_2007.2.mw
@@ -76,3 +76,4 @@ More research needed.
 Lines are all tangled up between various points. Your job is to untangle the web, ensuring that no lines cross between the points. Mostly entertaining, but picking the point with your finger can be a little fiddly.
 
 [[Category:Openmoko]]
+[[Category:Om 2007.2]]
