*Empty MediaWiki Message*

--- a/Om_2007.2_Applications.mw
+++ b/Om_2007.2_Applications.mw
@@ -86,3 +86,4 @@ Only a few applications that appear to be under consideration for addition to th
 [[Category:Applications]]
 [[Category:Openmoko]]
 [[Category:Guides]]
+[[Category:Om 2007.2]]
