/* Quoi de neuf */ ajout comparaison om2007.2 / om 2008.8 + texte "galeries" mis en citation

--- a/Om_2008.8%2Ffr.mw
+++ b/Om_2008.8%2Ffr.mw
@@ -31,11 +31,22 @@
 |}
 
 == Quoi de neuf ==
+Comparé à Om2007.2 qui a eu un développement plus long, Om 2008.8 est une version majeure ".0" mais pas dans le sens "Linux 2.6.23" faisant suite à "Linux 2.6.22". On peut comparer Om2007.2 et Om2008.8 à KDE 3.5 (stable) et KDE 4.0 (incomplet mais au développement intensif).
+Si vous voulez le niveau de stabilité requis pour utiliser le FreeRunner comme téléphone principal, il est recommandé de garder Om2007.2 dans la mémoire flash du téléphone et de tester Om 2008.8 sur la carte microSD amovible.
+
+<pre>
+De  : Openmoko
+A : liste de diffusion openmoko-community
+
 '''Om 2008.8''' a été créé pour être vide, afin d'offrir une vitrine pour vos idées.
 
-Pensez à vos créations comme des galeries. Nous en construisons l'environnement. Chacune différente de la suivante. Vous pourrez prendre la liberté d'imaginer la votre parce que nous voulons que vous ajoutiez votre touche. Au choix : vous pouvez utiliser, créer ou les deux.
+Pensez à vos créations comme des galeries. 
+Nous en construisons l'environnement. Chacune différente de la suivante. 
+Vous pourrez prendre la liberté d'imaginer la vôtre parce que nous voulons que vous ajoutiez votre touche. 
+Au choix : vous pouvez utiliser, créer ou les deux.
 
 Peu importe le chemin, vous créez à votre image. C'est à votre sujet.
+</pre>
 
 === Personnalisation ===
 
