*Empty MediaWiki Message*

--- a/Neo_FreeRunner_Wifi.mw
+++ b/Neo_FreeRunner_Wifi.mw
@@ -51,6 +51,11 @@ If anything is visible you will get a list that looks something like this:
                      Encryption key:on
                      Extra:bcn_int=100
 
+If you want to connect to an unsecured network run:
+  
+  udhcpc  
+
+
 == Using WPA and /etc/network/interfaces==
 
 [http://en.wikipedia.org/wiki/Wi-Fi_Protected_Access  WPA] is a encryption method for securing your wireless network.
