*Empty MediaWiki Message*

--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -52,6 +52,8 @@ All steps can be done automatically with this shell-script: [http://paste.ubuntu
 
 If you have problems with illume crashing, make sure that you don't have a copy of the original ASU Default.kbd file laying around (the one with the predictive dictionary).
 
+== Debate ==
+Some people doesn't like this keyboard, because it lacks a full Qwerty keyboard. Another issue people have, is they can't switch the keyboard prediction off.
 
 
 [[Category:Om 2008.8]]
