--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -17,7 +17,7 @@ The main user-visible changes:
 * '''[[Om2008.8_Installer|A graphical installer]]''' allows to add easily new applications, themes and functionality.
 * A new [[Om2008.8_Locations|Locations]] application is provided, to save your favorite spots and share them with friends via sms.
 * Power management has been improved: The Aux button now locks the screen, the Power button suspends and the red LED behind the Aux button lights up when charging.
-* The [[Om2008.8_Keyboard| keyboard]] is now the Qtopia one (whether this is an improvement has been [[Keyboard_Debate|hotly debated]]).
+* The [[Om2008.8_Keyboard| keyboard]] is now the Qtopia one (whether this is an improvement has been [[Om_2008.8_Keyboard#Debate|hotly debated]]).
 
 For developers, the main changes are:
 * Multiple toolkits: '''Om 2008.8''' supports [http://www.enlightenment.org/ EFL], [http://trolltech.com/products/qtopia Qtopia] and [http://www.gtk.org GTK+] applications.
