--- a/GPS_Problems.mw
+++ b/GPS_Problems.mw
@@ -1,4 +1,4 @@
-See [[GPS]] for details on how to evaluate the Freerunner GPS with command line utilities.
+See [[GPS]] for details on how to evaluate the [[Neo FreeRunner GPS]] with command line utilities.
 
 === Problem: it takes a long time (10min+) before the Freerunner gets first GPS data ===
 
