*Empty MediaWiki Message*

--- a/Navit.mw
+++ b/Navit.mw
@@ -143,5 +143,4 @@ dlOSM.sh:
  getOsms('map', minLat, maxLat, minLon, maxLon)
 </pre>
 
-[[Category:Applications]]
-[[Category:GPS]]
+[[Category:GPS Applications]]
