--- a/TangoGPS%2Fde.mw
+++ b/TangoGPS%2Fde.mw
@@ -29,4 +29,4 @@ Dann kann man gpsd starten:
 
 Mit eingeschaltetem GPS sollte Tangogps jetzt die aktuelle Position anzeigen. Achtung, es kann eine ganze weile dauern, bis das GPS einen Fix bekommt. Mehr dazu bei [[GTA02_GPS]].
 
-[[Category:GPS]]
+[[Category:GPS/de]]
