*Empty MediaWiki Message*

--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -93,4 +93,4 @@ Go to Config and change the url to http://mt1.google.com/mt?&x=%d&y=%d&zoom=%d a
 :Automated map download will most certainly fail, as Google is very keen on keeping leechers out.
 :It did work for me...
 
-[[Category:GPS]]
+[[Category:GPS Applications]]
