--- a/Pyroute.mw
+++ b/Pyroute.mw
@@ -18,4 +18,4 @@ Then run 'python gui.py' in the directory you expanded pyroute into.
 
 Unfortunately, it takes a very long time to come up the first time, and some buttons don't appear to work.  It does read gpsd and show you your location.
 
-[[Category:GPS applications]]
+[[Category:GPS Applications]]
