--- a/Orrery.mw
+++ b/Orrery.mw
@@ -195,6 +195,5 @@ Version 1.1 Changes:
 Please send comments, suggestions, questions and/or
 abuse to orrery.moko@gmail.com
 
-[[category:Openmoko]]
 [[category:Applications]]
-[[category:GPS]]
+[[category:GPS Applications]]
