*Empty MediaWiki Message*

--- a/GPS-Trail.mw
+++ b/GPS-Trail.mw
@@ -74,8 +74,7 @@ Also, a seperate mapping tool may be of use, rather than bloating this one.
 == Questions and Answers ==
 (TBD)
 
-[[Category:Finger based]]
-[[Category:GPS]]
+[[Category:GPS Applications]]
 [[Category:Unimplemented]]
 <span id="bottom"></span> 
 {{Languages|OpenStreetMap}}
