--- a/GPS_Sight.mw
+++ b/GPS_Sight.mw
@@ -42,4 +42,4 @@ The device has been tested outdoors where it shows the correct location and alti
 == Project organization ==
 The project uses CVS to host the most recent source code and all build environment and sometimes does releases of .ipk binaries and plain gzipped source code. Project also uses [http://projects.openmoko.org/plugins/wiki/index.php?id=108&type=g Wiki page] to describe various technical aspects.
 
-[[Category:GPS]]
+[[Category:GPS Applications]]
