--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2604,6 +2604,31 @@ Due to common customs problems we created google group to discuss how to get tha
 | 1
 |}
 
+
+=== Surgut ===
+
+{| border="1"
+|rowspan=2| login
+|rowspan=2| google groups name
+| colspan="3"| number of items
+|-
+| Neo FreeRunner
+| Dboard
+| Spares Pack
+|-
+| 1.
+| mpak@pochta.ru
+| 0 (1)
+| 0
+| 0 (1)
+|-
+|Total number:
+|
+| 0 (1)
+| 0
+| 0 (1)
+|}
+
 == Singapore ==
 Status : 5/10
 * Wee Kiam Peng [http://wiki.openmoko.org/wiki/Special:Emailuser/Jipi Contact]
