*Empty MediaWiki Message*

--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -1,4 +1,4 @@
-This page was created to address the use cases mentioned in [[GTA02 GPS]], including
+This page was created to address the use cases mentioned in [[Neo FreeRunner GPS]], including
 
 * I want to log GPS data for later analysis.
 * I want to collect GPS data for scientific field work (forestry, biology, etc)
