--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2617,16 +2617,16 @@ Due to common customs problems we created google group to discuss how to get tha
 | Spares Pack
 |-
 | 1.
-| mpak@pochta.ru
-| 0 (1)
+| freerunner@mpak.su
+| 1
 | 0
-| 0 (1)
+| 1
 |-
 |Total number:
 |
-| 0 (1)
+| 1
 | 0
-| 0 (1)
+| 1
 |}
 
 == Singapore ==
