*Empty MediaWiki Message*

--- a/Qpegps.mw
+++ b/Qpegps.mw
@@ -6,6 +6,4 @@ Possible disadvantage of this solution is, that  map files as gif or png are nee
 
 see http://sourceforge.net/projects/qpegps/
 
-[[Category:Openmoko]]
-[[Category:Applications]]
-[[Category:GPS]]
+[[Category:GPS Applications]]
