*Empty MediaWiki Message*

--- a/QMapControl.mw
+++ b/QMapControl.mw
@@ -10,4 +10,4 @@ project at sourceforge: http://sourceforge.net/projects/qmapcontrol
 
 [[Image:Qmapcontrol.gif]]
 
-[[Category:Hardware]]
+[[Category:GPS applications]]
