Added note on azimuth values, and gpsd restart bug

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -37,6 +37,17 @@ plotted, and the Moon is shown with the proper phase.   The Sun and Moon are
 plotted with a size much larger than their true angular size on
 the sky.
 
+=== The orrery as a compass ===
+The green numbers at the bottom are the azimuth values.   The
+azimuth is measured along the horizon, from north through east.
+So the azimuth of due north is 0, east is 90, south is 180
+and west is 270 degrees.   By using these azimuth values, the
+orrery can be used as a celestial compass, if the sky above you
+is at least partially clear.   Notice that the azimuth values are
+not exactly evenly spaced.   This is caused by the distortion
+introduced by the Transverse Mercator projection.
+
+=== Constellations Display ===
 There are two display screens defined.   By default, one of them shows
 the display shown above, and the other shows the constellations, and
 symbolic representations of the solar system objects.
@@ -161,6 +172,10 @@ that by removing the file
 /usr/share/orrery/constellations/Orion~ . This problem
 was fixed on the 1.1.1 .ipk file for 2007.2, and the
 1.1.2 .ipk file for 2008.8 .
+
+=== Restarting gpsd crashes orrery ===
+If you restart gpsd while the orrery is running, the
+orrery will crash if it is configured to use the GPS position.
 
 '''Send more bug reports!'''
 
