--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2608,9 +2608,8 @@ Due to common customs problems we created google group to discuss how to get tha
 === Surgut ===
 
 {| border="1"
-|rowspan=2| login
-|rowspan=2| google groups name
-| colspan="3"| number of items
+|rowspan=2| Логин
+| colspan="3"| Номер
 |-
 | Neo FreeRunner
 | Dboard
