--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2615,7 +2615,7 @@ Due to common customs problems we created google group to discuss how to get tha
 | Dboard
 | Spares Pack
 |-
-| 1.
+| 1. mpak
 | freerunner@mpak.su
 | 1
 | 0
