--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2097,11 +2097,18 @@ Due to common customs problems we created google group to discuss how to get tha
 | 1(P3.8)
 |
 |-
+| 26. [[Special:Emailuser/Magellan|Magellan]]
+|  magellan
+| 1
+| 1
+| 1
+|
+|-
 |Total number:
 |
-| 21(28?)
-| 5(7?)
-| 13(15?)
+| 22(29?)
+| 6(8?)
+| 14(16?)
 |}
 
 === Kazan ===
