--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2616,14 +2616,13 @@ Due to common customs problems we created google group to discuss how to get tha
 
 {| border="1"
 |rowspan=2| Логин
-| colspan="3"| Номер
+| colspan="4"| Номер
 |-
 | Neo FreeRunner
 | Dboard
 | Spares Pack
 |-
-| 1. mpak
-| freerunner@mpak.su
+| 1. mpak freerunner@mpak.su
 | 1
 | 0
 | 1
