--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2622,7 +2622,7 @@ Due to common customs problems we created google group to discuss how to get tha
 | Dboard
 | Spares Pack
 |-
-| 1. mpak freerunner@mpak.su
+| 1. mpak freerunner[dog]mpak.su
 | 1
 | 0
 | 1
