Added A/V section and car computer

--- a/Wishlist_-_Hardware_-_Novel_Devices.mw
+++ b/Wishlist_-_Hardware_-_Novel_Devices.mw
@@ -120,12 +120,15 @@ Similar to the PCI hardware model of desktop PCs -- let savvy users swap and upg
  This adds yet more weight and volume.
  --[[User:Speedevil|Speedevil]] 12:03, 29 June 2007 (CEST)
 
+==Audio & video==
+
+===In-dash car computer / tuner / cd-player ===
+
 ==Unsorted==
 
 ===Virtual laser keyboard===
 see...
 http://www.virtual-laser-keyboard.com/?an=google
-
 
 == Different Shapes & Styles ==
 ==== See [[Wish_List_-_Hardware#Casing]] for case suggestions & case mods ==== 
