--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -8,11 +8,7 @@ Om 2008.8 uses Qtopia for its phone stack. Qtopia has a build-in keyboard primar
 
 [http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p780454.html| More details...]
 
-== List of keyboard bugs in the Trac ==
-
-The Qtopia keyboard reappears after opkg update.
-
-
+List of all [https://docs.openmoko.org/trac/search?q=keyboard| keyboard bugs in the defect tracking system].
 
 == List of available keyboards ==
 
