/* In-dash car computer / tuner / cd-player */

--- a/Wishlist_-_Hardware_-_Novel_Devices.mw
+++ b/Wishlist_-_Hardware_-_Novel_Devices.mw
@@ -124,6 +124,14 @@ Similar to the PCI hardware model of desktop PCs -- let savvy users swap and upg
 
 ===In-dash car computer / tuner / cd-player ===
 
+I would love to see a FOSS, OpenMoko-powered in-dash car computer. I think there's a good market for it and component-wise it's probably easier and cheaper to build than the Neo phones (more off-the-self components, less hassle with parts under legal wraps like the Neo GSM chip). There are several possible versions of such hardware, ranging from similar to existing devices to completely innovative.
+
+A model similar to competing devices could be build from a standard 1-din case with a customized detachable front. Features: Tuner, RDS, CD player, USB port, aux line-in, Bluetooth, SD card slot. Except for the detachable front (which would have to be custom designed, or at the very least branded) most of the components are standard off-the-self components. The case is standardized and is large enough to hold a microATX or nanoATX board and a slim CD/DVD player such as found in laptops. Power supplies that hook to the car battery, USB, SD and Bluetooth are standard as well. Either on-board audio or an internal sound card can provide all the audio input and output required. The SD card slot and USB port could be put in the detachable front. That way you could simply take out the frame, hook it to your PC with a male-male USB cable and reprogram the device. No need to fiddle with the SD card. All this powered by the OpenMoko software stack of course.
+
+A more geeky version of the above could offer wifi for example (to communicate from your PC with the car that's in the garage. E.g. uploading new music). Or perhaps the USB slot in the front can be made a full USB host so you can use USB wifi sticks or other USB devices as well as standard USB storage.
+
+A more innovative version of such a device could be by embedding a big touch-screen LCD in the front of the device and optionally just one button: a knob that you can turn and push in. Resolution would have to match the aspect ratio of a standard 1-din device so it would probably be something like 1024x480 or 800x320. Such a device would also need a more capable graphics processor, perhaps one similar to the Neo Freerunner capable of OpenGL ES. Touchscreen LCDs are common in car navigation equipment but to my knowledge have never been used on standard 1-din in-dash receivers before. You could get a very novel and elegant UI using this, much more elegant that in-dash receivers usually are.
+
 ==Unsorted==
 
 ===Virtual laser keyboard===
