/* List of Howtos */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -22,6 +22,8 @@ The vkbd system.
 
 == List of Howtos ==
 
+[Om_2008.8_Keyboard| How to use the Qtopia keyboard] shipped with Om 2008.8 ?
+
 How to have a button to make the keyboard appear/disappear ?
 
 How to change the keyboards layout ?
