/* List of Howtos */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -20,11 +20,11 @@ The illume virtual keyboard a.k.a. Raster's keyboard.
 
 The vkbd system.
 
-== List of Howtos ==
+== List of keyboard-related Howtos ==
 
-[Om_2008.8_Keyboard| How to use the Qtopia keyboard] shipped with Om 2008.8 ?
+[[Om_2008.8_Keyboard| How to use the Qtopia keyboard]] shipped with Om 2008.8 ?
 
-How to have a button to make the keyboard appear/disappear ?
+How to have a toggle button to make the keyboard appear/disappear ?
 
 How to change the keyboards layout ?
 
