--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -54,7 +54,7 @@ If you have problems with illume crashing, make sure that you don't have a copy 
 
 == Debate ==
 Some people doesn't like this keyboard, because it lacks a full Qwerty keyboard. Another issue people have, is they can't switch the keyboard prediction off.
-
+{{main|Keyboard_Debate}}
 
 [[Category:Om 2008.8]]
 [[Category:Guides|Keyboard Om 2008.8]]
