/* Summary of the problem */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -4,11 +4,11 @@
 
 == Summary of the problem ==
 
-Om 2008.8 uses Qtopia for its phone stack. Qtopia has a build-in keyboard primarily designed to compose SMS in English. This keyboard is very impractical to use with a terminal or enter an URL. [http://lists.openmoko.org/pipermail/support/2008-August/002184.html| According to Raster] it cannot be turned off, [http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p778919.html| short of recompiling qpe] of course.
+Om 2008.8 uses Qtopia for its phone stack. Qtopia has a build-in keyboard primarily designed to compose SMS in English. This keyboard is very impractical to use with a terminal or enter an URL. [http://lists.openmoko.org/pipermail/support/2008-August/002184.html According to Raster] it cannot be turned off, [http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p778919.html short of recompiling qpe] of course.
 
-[http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p780454.html| More details...]
+[http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p780454.html More details...]
 
-List of all [https://docs.openmoko.org/trac/search?q=keyboard| keyboard bugs in the defect tracking system].
+List of all [https://docs.openmoko.org/trac/search?q=keyboard keyboard bugs in the defect tracking system].
 
 == List of available keyboards ==
 
