/* Your short-term options */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -34,7 +34,7 @@ How to change the dictionnary used by the predictive keyboards ?
 
 * Recompile Qtopia and provide a package.
 * Switch to 2007.2, FSO or Debian.
-PS: Complaining that management does not listen to the users needs is not an option.
+PS: Complaining that management does not listen to the users needs is not a productive option.
 {{todo|find a cartoon to add humor here, the debate can use some relaxation}}
 
 == Perspectives for long-term resolution ==
