/* Summary of the problem */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -8,7 +8,7 @@ Om 2008.8 uses Qtopia for its phone stack. Qtopia has a build-in keyboard primar
 
 [http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p780454.html More details...]
 
-List of all [https://docs.openmoko.org/trac/search?q=keyboard keyboard bugs in the defect tracking system].
+List of all [https://docs.openmoko.org/trac/query?status=accepted&status=assigned&status=in_testing&status=new&status=reopened&summary=~keyboard&order=priority keyboard bugs in the defect tracking system].
 
 == List of available keyboards ==
 
