--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -32,8 +32,10 @@ How to change the dictionnary used by the predictive keyboards ?
 
 == Your short-term options ==
 
-* Recompile Qtopia and provide a package.
+* Live with it, let go (for a while) the desire to use the terminal locally, login remotely via ssh when you need.
+* Get an external keyboard, USB or Bluetooth, light and foldable if you want.
 * Switch to 2007.2, FSO or Debian.
+* Recompile Qtopia and provide a package.
 PS: Complaining that management does not listen to the users needs is not a productive option.
 {{todo|find a cartoon to add humor here, the debate can use some relaxation}}
 
