*Empty MediaWiki Message*

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -1,4 +1,4 @@
-{{note|This is an emotionally laden topic. Please stick to facts and Neutral Point of View.[[User:MinhHaDuong|MinhHaDuong]] 09:43, 27 August 2008 (UTC)}}
+{{note|This is an emotionally laden topic. Please stick to facts and Neutral Point of View.}}
 
 {{note|This is work in progress. Please help by linking to appropriate messages and wiki pages.}}
 
