--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -65,8 +65,7 @@ after that you will need to restart the framework (kill the process and start it
 
 ===Known Issus===
 * In some images (last FSO) the keyboard only show up, if the app is in window mode;
-* The 'backslash' key is wrong mapped;
-* In illume keyboard in the FSO milestone 2 have some bug's yet in the default profile and in the numbers profile;
+* The mouse profile can slow down a little bit if you have the gestures daemon and other program running on the phone. 
 * Connection problems with Symbian S60 devices with BT-HID keyboard app provided by Nokia;
 
 ===Tested Bluetooth Stacks ===
