--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -43,6 +43,9 @@ after that you will need to restart the framework (kill the process and start it
 ** Go to the bluetooth preferences and choose 'Add a new device';
 ** Choose the neo (default name is  'BlueZ (0)') and choose 'no password';
 
+===Using Gestures===
+* To use gestures to send event, you just need to install the gestures package (no need to start the gestures listener), you can also train the gestures, more info [[Gestures here]].
+
 ===Features===
 *'''Connection'''
 ** Connection to the majority of the bluetooth stacks;
