--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -44,7 +44,7 @@ after that you will need to restart the framework (kill the process and start it
 ** Choose the neo (default name is  'BlueZ (0)') and choose 'no password';
 
 ===Using Gestures===
-* To use gestures to send event, you just need to install the gestures package (no need to start the gestures listener), you can also train the gestures, more info [[Gestures here]].
+* To use gestures to send event, you just need to install the gestures package (no need to start the gestures listener), you can also train the gestures, more info [[http://wiki.openmoko.org/wiki/Gestures here]].
 
 ===Features===
 *'''Connection'''
