--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -28,7 +28,7 @@ Press "remove" to close currently focused application.
 
 *'''"opkg install"''' - Install software.
 
-*'''"opkg upgrade"''' - Updates your software. (At present this will fry your FR see the "Future Updates" section of [[Om 2008.8]])
+*'''"opkg upgrade"''' - Updates your software.
 
 *'''"killall packagekitd"''' - Quits any package manager which could be running. (Run this command if you get the "Could not obtain administrative lock" error message while running opkg commands)
 
