*Empty MediaWiki Message*

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -1,4 +1,4 @@
-If you think something is wrong with a Wiki page or with this Wiki in general, please add your thoughts to this list. You may just want to read existing proposals and put your vote on them, [[Wiki Maintainers]] will appreciate. [[Wiki maintain agenda]].
+If you think something is wrong with a Wiki page, please fix it. If the problem is larger with this Wiki in general, please add your thoughts on this page and mail the openmoko [https://lists.openmoko.org/mailman/listinfo/documentation| documentation mailing list]. You may just want to read existing proposals and put your vote on them, [[Wiki Maintainers]] will appreciate. [[Wiki maintain agenda]].
 
 When adding an issue please 
 
