/* Pages proposed for deletion */ Moved "Pages that especially need work" here from the Edit Wiki  page

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -80,6 +80,19 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[Bootcharts]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
+=== Pages that especially need work === 
+
+* [[:Category:Candidates for speedy deletion]]
+* [[Special:Lonelypages]] - Orphaned pages
+* [[Special:DoubleRedirects]] - Pages that redirect to a redirected page
+* [[Special:Popularpages]] - Pages that get viewed a lot
+* [[Special:Ancientpages]] - Old pages
+* [[Special:Newpages]] - New pages
+* [[Special:Wantedpages]] - Wanted pages
+* [[Special:Uncategorizedpages]]
+* [[Special:Shortpages]] - Informationally light pages
+* [[Special:BrokenRedirects]] - Broken redirects
+
 ==Categories ==
 
 ===General issues with categories===
