--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -5,6 +5,7 @@ If you are new to wiki editing, please read:
 * [[Openmoko Wiki Editing Guidelines]] 
 * [http://meta.wikimedia.org/wiki/Help:Wikitext_examples MediaWiki Wikitext Examples]
 * [[Wiki Issues]]
+* [[Help:Editing]]
 
 ==If you add a new page==
 If you create a new wiki page, please visit [[Openmoko Wiki Categories Index Page|Openmoko Wiki Categories Index Page]] to see the available categories and please put your page on the right category. This will make it easier for wiki users to find your page.
