--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -1,10 +1,10 @@
 The Openmoko Wiki is open. Everyone can join and edit its content. For doing this you will have to [http://wiki.openmoko.org/index.php?title=Special:Userlogin&type=signup register]. Join our wiki, edit the wiki, contribute valued content, and help others. For the full picture of Openmoko Wiki, please visit the [[Openmoko Wiki Official Index Page|Openmoko Wiki Official Index Page]].  
 
 ==If you are a beginner==
+People usually start editing a wiki by fixing small things, like obvious grammar and style mistakes.
 If you are new to wiki editing, please read:
 * [[Openmoko Wiki Editing Guidelines]] 
 * [http://meta.wikimedia.org/wiki/Help:Wikitext_examples MediaWiki Wikitext Examples]
-* [[Wiki Issues]]
 * [[Help:Editing]]
 
 ==If you add a new page==
